# ltm

./: .gitignore  bugs.txt
ar_track_alvar_msgs/: mainpage.dox  manifest.xml
ltm/: CMakeLists.txt  Doxyfile  README.md  TODO.txt  mainpage.dox  manifest.xml
ltm/doc/: .ltm_notes.tex.swp  ltm_notes.tex
ltm/include/ltm/: abstract_model.h  abstract_model_bank.h  d_model.h  d_model_bank.h  d_model_learner.h  d_model_planner.h  d_model_structs.h  d_model_utils.h  lao_planner.h  ltm_viz.h
ltm/include/ltm/kinematic_models/: abstract_kinematic_model.h  prismatic_model.h  revolute_model.h  spherical_model.h
ltm/matlab/: dummy.txt  generate_fprims_circle_uniform.m  generate_fprims_linear_uniform.m  generate_fprims_sphere_uniform.m  generate_model.m  generate_model_old_cube.m
ltm/matlab/fprims/: circle_20.fprim  circle_40.fprim  linear_4.fprim  sphere_20.fprim  two_forces.fprims
ltm/matlab/models/: cabinet.mdl  cube.mdl  door.mdl  drawer_new.mdl  drawer_small.mdl  revolute.mdl  toy.mdl
ltm/matlab/models/test1/: fixed_model.mdl  prismatic_model.mdl
ltm/matlab/test_data/test1/: .switching_obs_sequence.txt.swp  fixed_obs_sequence.txt  prismatic_obs_sequence.txt  switching_obs_sequence.txt
ltm/scripts/: start_work.sh
ltm/src/: d_model.cpp  d_model_bank.cpp  d_model_learner.cpp  d_model_planner.cpp  d_model_utils.cpp  lao_planner.cpp  ltm_viz.cpp
ltm/src/kinematic_models/: abstract_kinematic_model.cpp  prismatic_model.cpp  revolute_model.cpp  spherical_model.cpp
ltm/src/test/: main.cpp  test_env.cpp  test_learning.cpp
ltm/test/: learner_utest.cpp
ltm_helpers/articulation_models/: manifest.xml
ltm_interactive_control/: CMakeLists.txt  mainpage.dox  manifest.xml
ltm_msgs/: mainpage.dox  manifest.xml
ltm_perception/: CMakeLists.txt  manifest.xml
ltm_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
ltm_simple_arm_control/: CMakeLists.txt  manifest.xml
ltm_viz/: CMakeLists.txt  manifest.xml
point_tracker/: .manifest.xml.swp  CMakeLists.txt  mainpage.dox  manifest.xml
(+88 files in other folders)
